tests/should_fail/preprocessor_ub.c
#if (-0x7fffffffffffffff - 1) / -1
int main(void) { }
#endif
